Add dashboard style

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
   <div id="sidebar">
-    <div class="sidebar-item"><span></span>Dashboard</div>
-    <div class="sidebar-item"><span></span>Home</div>
-    <div class="sidebar-item"><span></span>Profile</div>
-    <div class="sidebar-item"><span></span>Messages</div>
-    <div class="sidebar-item"><span></span>History</div>
-    <div class="sidebar-item"><span></span>Tasks</div>
-    <div class="sidebar-item"><span></span>Communities</div>
-    <div class="sidebar-item"><span></span>Settings</div>
-    <div class="sidebar-item"><span></span>Support</div>
-    <div class="sidebar-item"><span></span>Privacy</div>
+    <div class="sidebar-item" id="dashboard"><span><img src="./img/view-dashboard.svg" ></span>Dashboard</div>
+    <div class="sidebar-item"><span><img src="./img/home.svg" ></span>Home</div>
+    <div class="sidebar-item"><span><img src="./img/profile.svg" ></span>Profile</div>
+    <div class="sidebar-item"><span><img src="./img/message.svg" ></span>Messages</div>
+    <div class="sidebar-item"><span><img src="./img/history.svg" ></span>History</div>
+    <div class="sidebar-item"><span><img src="./img/task.svg" ></span>Tasks</div>
+    <div class="sidebar-item"><span><img src="./img/communities.svg" ></span>Communities</div>
+    <div class="sidebar-item" id="setting"><span><img src="./img/settings.svg" ></span>Settings</div>
+    <div class="sidebar-item"><span><img src="./img/support.svg" ></span>Support</div>
+    <div class="sidebar-item"><span><img src="./img/privacy.svg" ></span>Privacy</div>
   </div>
   <div id="header">
-    <div id="search-bar"></div>
-    <div id="user"></div>
-    <div id="greeting"></div>
-    <div id="buttons"></div>
+    <div id="search-bar">1</div>
+    <div id="user">2</div>
+    <div id="greeting">3</div>
+    <div id="buttons">4</div>
   </div>
   <div id="content">
     <p>Your Projects</p>
