--- a/index.html
+++ b/index.html
@@ -21,20 +21,99 @@
     <div class="sidebar-item"><span><img src="./img/privacy.svg" ></span>Privacy</div>
   </div>
   <div id="header">
-    <div id="search-bar">1</div>
-    <div id="user">2</div>
-    <div id="greeting">3</div>
-    <div id="buttons">4</div>
+    <div id="search-bar">
+      <form action="">
+        <button><img src="./img/search.svg"></button>
+        <input type="search" name="search" id="search">
+      </form>
+    </div>
+    <div id="user">
+      <img src="./img/bell.svg">
+      <img src="https://via.placeholder.com/40.png/008000/000000?text=pfp">
+      <p>Morgan Barkley</p>
+    </div>
+    <div id="greeting">
+      <img src="https://via.placeholder.com/40.png/008000/000000?text=pfp">
+      <div>
+        <p>Hi there,</p>
+        <p class="user">Morgan Barkley (@morgan)</p>
+      </div>
+    </div>
+    <div id="buttons">
+      <button>New</button>
+      <button>Upload</button>
+      <button>Share</button>
+    </div>
   </div>
   <div id="content">
     <p>Your Projects</p>
     <div id="projects">
-      <div class="project">1</div>
-      <div class="project">2</div>
-      <div class="project">3</div>
-      <div class="project">4</div>
-      <div class="project">5</div>
-      <div class="project">6</div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Rutrum quisque non tellus orci ac auctor. Aliquam malesuada bibendum arcu vitae elementum curabitur. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Eget aliquet nibh praesent tristique. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Orci nulla pellentesque dignissim enim sit amet. Id semper risus in hendrerit.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
+      <div class="project">
+        <div class="text">
+          <p><strong>Super cool project</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
+        </div>
+        <div class="buttons">
+          <button><img src="./img/star.svg"></button>
+          <button><img src="./img/eye.svg"></button>
+          <button><img src="./img/share.svg"></button>
+        </div>
+      </div>
     </div>
   </div>
   <div id="annoucements">
