--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="projects">
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
         </div>
         <div class="buttons">
@@ -61,7 +61,7 @@
       </div>
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
         </div>
         <div class="buttons">
@@ -72,7 +72,7 @@
       </div>
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Rutrum quisque non tellus orci ac auctor. Aliquam malesuada bibendum arcu vitae elementum curabitur. Proin nibh nisl condimentum id venenatis a condimentum vitae sapien. Eget aliquet nibh praesent tristique. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Orci nulla pellentesque dignissim enim sit amet. Id semper risus in hendrerit.</p>
         </div>
         <div class="buttons">
@@ -83,7 +83,7 @@
       </div>
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
         </div>
         <div class="buttons">
@@ -94,7 +94,7 @@
       </div>
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
         </div>
         <div class="buttons">
@@ -105,7 +105,7 @@
       </div>
       <div class="project">
         <div class="text">
-          <p><strong>Super cool project</strong></p>
+          <h2>Super cool project</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae et leo duis ut diam quam nulla.</p>
         </div>
         <div class="buttons">
@@ -118,18 +118,29 @@
   </div>
   <div id="annoucements">
     <p>Annoucements</p>
-    <div>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
+    <div id="annoucement-content">
+      <div>
+        <h4>Site Maintainance</h4>
+        <p>Urna condimentum mattis pellentesque id nibh tortor id. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus.</p>
+      </div>
+      <div>
+        <h4>Community Share Day</h4>
+        <p>Urna condimentum mattis pellentesque id nibh tortor id. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus.</p>
+      </div>
+      <div>
+        <h4>Updated Privacy Policy</h4>
+        <p>Urna condimentum mattis pellentesque id nibh tortor id. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus.</p>
+      </div>
     </div>
   </div>
   <div id="trending">
     <p>Trending</p>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
+    <div id="trending-content">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+    </div>
   </div>
 </body>
 </html>
